--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.39", features = ["derive"] }
 serde_json = "1.0.39"
-users   = { path = "lib/users" }
+users  = { path = "lib/users" }
+app-modmetrics = { path = "lib/modmetrics"}
+
 [workspace]
 members = [
     "lib/users",
     "lib/usersmain",
     "lib/libmods",
-    "lib/moddemo"
+    "lib/moddemo",
+    "lib/modmetrics"
 ]
 
