--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0.39", features = ["derive"] }
 serde_json = "1.0.39"
 users  = { path = "lib/users" }
 app-modmetrics = { path = "lib/modmetrics"}
-
+macros_lib =  {path = "learning/macros_lib"}
 [workspace]
 members = [
     "lib/users",
@@ -22,6 +22,9 @@ members = [
     "learning/arrays",
     "learning/matchs",
     "learning/lifetime",
-    "learning/rc-demo"
+    "learning/rc-demo",
+    "learning/closure",
+    "learning/macros",
+    "learning/macros_lib"
 ]
 
