add cli with clap demo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
     "learning/rc-demo",
     "learning/closure",
     "learning/macros",
-    "learning/macros_lib"
+    "learning/macros_lib",
+    "learning/cliapp"
 ]
 
